--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -11,7 +11,8 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="https://www.unl.edu">
-            <img alt="Brand" src="https://ucomm.unl.edu/images/brand-book/Our-marks/R-UNL-Hex.svg" class = "navbar-brand" ></a>
+                <img alt="Brand" src="https://ucomm.unl.edu/images/brand-book/Our-marks/R-UNL-Hex.svg"
+                     class="navbar-brand"></a>
             <a class="navbar-brand" href="/">{{ config['title'] }}</a>
         </div>
 
@@ -28,14 +29,14 @@
                     <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Class <span class="caret"></span></a>
                     <ul class="dropdown-menu" aria-labelledby="about-us">
-                        <li><a href="{{ url_for('classes', class_id = "ORs")}}">ORs</a></li>
-                        <li><a href="{{ url_for('classes', class_id = "FRs")}}">FRs</a></li>
-                        <li><a href="{{ url_for('classes', class_id = "HRs")}}">HRs</a></li>
-                        <li><a href="{{ url_for('classes', class_id = "NCRs")}}">NCRs</a></li>
-                        <li><a href="{{ url_for('classes', class_id = "IRs")}}">IRs</a></li>
-                        <li><a href="{{ url_for('classes', class_id = "SRs")}}">SRs</a></li>
-                        <li><a href="{{ url_for('classes', class_id = "TRs")}}">TRs</a></li>
-                        <li><a href="{{ url_for('classes', class_id = "UCs")}}">UCs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "ORs") }}">ORs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "FRs") }}">FRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "HRs") }}">HRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "NCRs") }}">NCRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "IRs") }}">IRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "SRs") }}">SRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "TRs") }}">TRs</a></li>
+                        <li><a href="{{ url_for('classes', class_id = "UCs") }}">UCs</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
