--- a/templates/blastx.html
+++ b/templates/blastx.html
@@ -21,34 +21,38 @@
     <div class="container">
         <form id="blastx-form" name="blastx-form" action="/blastx" method="POST">
             {% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul style="color:red;" class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
+                {% if messages %}
+                    <ul style="color:red;" class=flashes>
+                        {% for message in messages %}
+                            <li>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            {% endwith %}
             <div style="text-align:left;">
                 <label for="subject" style="color:blue"> <b> I. Paste the sequence in the textarea. </b> </label> <br>
                 <span style="font-size:1em;">Try <a id="id_example" href="#" style="color:blue;" value="protein"> example </a> sequences.</span>
             </div>
             {{ form.hidden_tag() }}
-<textarea placeholder= "DNA sequence in fasta format" style="min-height:100px" rows="10" name="id_sequences" id="id_sequences" >
+            <textarea placeholder="DNA sequence in fasta format" style="min-height:100px" rows="10" name="id_sequences"
+                      id="id_sequences">
 </textarea>
-<br>
-	<div style="text-align:left;">
-	<label for="subject" style="color:blue"> <B> II. Or upload the sequence file. </B> </label> <br>
-	<span style="font-size: 1em;text-align:left;">File in Fasta format</span>
-	<input style="border-style: dotted;" type="file" id='id_file' name="id_file" value="" onchange='validateFasta(this.files)'/>
-	<input type="hidden" id="id_file_text" name="id_file_text">
-</div>
-<br>
+            <br>
+            <div style="text-align:left;">
+                <label for="subject" style="color:blue"> <B> II. Or upload the sequence file. </B> </label> <br>
+                <span style="font-size: 1em;text-align:left;">File in Fasta format</span>
+                <input style="border-style: dotted;" type="file" id='id_file' name="id_file" value=""
+                       onchange='validateFasta(this.files)'/>
+                <input type="hidden" id="id_file_text" name="id_file_text">
+            </div>
+            <br>
         </form>
-                {% for message in form.recaptcha.errors %}
-                    <div style="color:red;">{{ message }}</div>
-                {% endfor %}
-            <a class="btn btn-primary" onclick="document.getElementById('id_file').value = ''; document.getElementById('blastx-form').submit();">Run Blastx</a>
+        {% for message in form.recaptcha.errors %}
+            <div style="color:red;">{{ message }}</div>
+        {% endfor %}
+        <a class="btn btn-primary"
+           onclick="document.getElementById('id_file').value = ''; document.getElementById('blastx-form').submit();">Run
+            Blastx</a>
 
         <script type="text/javascript">
             function validatePaste() {
