--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
 
         </div>
     </div>
-    
+
     {% for message in form.email.recaptcha %}
         <div style="color:red;">{{ message }}</div>
     {% endfor %}
@@ -102,7 +102,8 @@
                 {% endfor %}
                 <br>
                 <div class="text-center text-md-left">
-                    <a class="btn btn-primary btn-lg btn-block" onclick="document.getElementById('contact-form').submit();">Send</a>
+                    <a class="btn btn-primary btn-lg btn-block"
+                       onclick="document.getElementById('contact-form').submit();">Send</a>
 
                 </div>
                 <div class="status"></div>
