--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,11 +1,10 @@
 <hr>
 <div class="row">
     <div class="col-lg-12">
-        <p class="text-center">Copyright &copy; 2020 -
-            <script>document.write(new Date().getFullYear())</script>
-            <a href="https://www.unl.edu/">UNL</a>. All rights reserved. Handcoded by <a
+        <p class="text-center">Copyright &copy;
+            {{now.year}}<a href="http://bcb.unl.edu/">Yin Lab </a>,
+            <a href="https://www.unl.edu/">University of Nebraska - Lincoln</a>. All rights reserved. Handcoded by <a
                     href="mailto:yhe@huskers.unl.edu">Yinchao He</a> &amp; <a
                     href="mailto:pengxiangzhang@huskers.unl.edu">Pengxiang Zhang</a></p>
     </div>
-</div>
 </div>
