Change count of class and subclass

--- a/templates/_css.html
+++ b/templates/_css.html
@@ -276,6 +276,9 @@
         overflow: hidden;
         box-sizing: content-box;
     }
+    .footnote hr{
+            display:none;
+    }
 
     body > h2:first-child {
         margin-top: 0;
