cleanup import code, auto add contect

--- a/templates/404.html
+++ b/templates/404.html
@@ -5,14 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Page Not Found | 404</title>
-
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:700,900" rel="stylesheet">
-
-    <!-- Custom stlylesheet -->
     <link type="text/css" rel="stylesheet" href="/static/styles/404.css"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -23,9 +19,7 @@
     <![endif]-->
 
 </head>
-
 <body>
-
 <div id="notfound">
     <div class="notfound">
         <div class="notfound-404">
@@ -39,7 +33,5 @@
         <a href="www.unl.edu">UNL</a>
     </div>
 </div>
-
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
-
+</body>
 </html>
