Auto add file, Network view updated, Download view updated

--- a/templates/download.html
+++ b/templates/download.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="container">
-        <h4>Treble Data</h4>
-        <a href="/static/download.exe" download>
+        <h4>Characterization Data</h4>
+        <a href="/static/Download/Characterization.tar.gz" download>
             <button type="button" class="btn btn-primary float-right">Download</button>
         </a>
     </div>
@@ -26,10 +26,10 @@
     <br>
 
     <div class="container">
-        <h4>Swiss Data</h4>
+        <h4>Sequence Similarity Network</h4>
         <a href="/static/download.exe" download>
             <button type="button" class="btn btn-primary float-right"
-                    href="https://ucomm.unl.edu/images/brand-book/Our-marks/nebraska-n.jpg" download>Download
+                    href="/static/Download/Sequence_Similarity_Network.tar.gz" download>Download
             </button>
         </a>
     </div>
@@ -37,8 +37,17 @@
     <br>
 
     <div class="container">
-        <h4>Evidence Data</h4>
-        <a href="/static/download.exe" download>
+        <h4>SwissProt Data</h4>
+        <a href="/static/Download/Swiss-Prot.tar.gz" download>
+            <button type="button" class="btn btn-primary float-right">Download</button>
+        </a>
+    </div>
+    
+    <br>
+    
+        <div class="container">
+        <h4>TrEMBL Data</h4>
+        <a href="/static/Download/TrEMBL.tar.gz" download>
             <button type="button" class="btn btn-primary float-right">Download</button>
         </a>
     </div>
