--- a/templates/network.html
+++ b/templates/network.html
@@ -3,6 +3,14 @@
 {% block title %}Network{% endblock %}
 
 {% block content %}
+<style>
+.myimg {
+  border: 2px solid #ddd;
+  border-radius: 6px;
+  padding: 5px;
+  width: 150px;
+}
+</style>
     <div class="row">
         <div class="page-header">
             <h3>Network for {{ name }}</h3>
@@ -21,9 +29,26 @@
             who went further than Darwin in proposing phylogenic histories of life. In contemporary usage, tree of life
             refers to the compilation of comprehensive phylogenetic databases rooted at the last universal common
             ancestor of life on Earth. The Open Tree of Life, first published September 2015, is a project to compile
-            such a database for free publ{c access.</p>
+            such a database for free publ{c access.</p></div>
+
+<ul id="myTab" class="nav nav-tabs">
+  <li class="active">
+    <a href="#{{name}}" data-toggle="tab">{{name}}</a>
+  </li>
+  {%for i in finalfile%}
+  <li><a href="#{{i}}" data-toggle="tab">{{i}}</a></li>
+  {%endfor%} 
+</ul>
+<div id="myTabContent" class="tab-content">
+    <br>
+        <div class="tab-pane fade in active" id="{{name}}">
+        <img class="myimg" src="../static/images/SSN_figures/{{name}}.jpg" data-large="../static/images/SSN_figures/{{name}}.jpg" alt="{{ name }}" style="width:100%">
+        </div>
+    {%for i in finalfile%}
+    <div class="tab-pane fade" id="{{i}}">
+        <img class="myimg" src="../static/images/SSN_figures/{{i}}.jpg" alt="{{ i }}" style="width:100%">
     </div>
-
-
+    {%endfor%} 
+    </div>
 
 {% endblock %}
