Day by Day requirement by Bo:

--- a/templates/download.html
+++ b/templates/download.html
@@ -3,6 +3,7 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
+
     <style>
         .container {
             border-radius: 5px;
@@ -27,9 +28,8 @@
 
     <div class="container">
         <h4>Sequence Similarity Network</h4>
-        <a href="/static/download.exe" download>
-            <button type="button" class="btn btn-primary float-right"
-                    href="/static/Download/Sequence_Similarity_Network.tar.gz" download>Download
+        <a href="/static/Download/Sequence_Similarity_Network.tar.gz" download>
+            <button type="button" class="btn btn-primary float-right">Download
             </button>
         </a>
     </div>
