--- a/templates/_head.html
+++ b/templates/_head.html
@@ -13,8 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
             integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-          integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous">
-
+          integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous"> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
             integrity="sha512-BkpSL20WETFylMrcirBahHfSnY++H2O1W+UnEEO4yNIl+jI2+zowyoGJpbtk6bx97fBXf++WJHSSK2MV4ghPcg=="
             crossorigin="anonymous"></script>
@@ -22,13 +21,8 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css"
           integrity="sha512-1k7mWiTNoyx2XtmI96o+hdjP8nn0f3Z2N4oF/9ZZRgijyV4omsKOXEnqL1gKQNPy2MTSP9rIEWGcH/CInulptA=="
           crossorigin="anonymous"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-select-dt/1.3.1/select.dataTables.min.js"
-            integrity="sha512-e129vtPta3e90MgxAcMNyKVSSru3b1j9TMhlOPqL6OSppVwQEElcLiB4GYFgPGgVcivM3Hj1Uvm7cBUGR/wl9A=="
-            crossorigin="anonymous"></script>
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-select-dt/1.3.1/select.dataTables.min.css"
-          integrity="sha512-nzNc6P/IVcmwtte/DNhN3NLG5Y/X3TLTSkJ0Ui8f+dM/mHWyHGitNjA/6c+QLd06mxkgPMFuaN7o2O6Q6nsWKQ=="
-          crossorigin="anonymous"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-select/1.3.0/dataTables.select.min.js" integrity="sha512-AmOf7RQXiCKRwfN2+n2UJNHGzHJ4K4S2YLC0KY0iN/Lnpkfk8IIczDB66SxSO3WGY4ysgc8z/gBmTD6pHNGmCA==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-select/1.3.0/dataTables.select.js" integrity="sha512-AKLT8695GVbB2UW4AXZv2MUN104zF7U0nZRUoF8JKgu2YCrqhDmIcxGJJAtX+GW+AwOBx+qNJ9vQuBSECveOzQ==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables-buttons/1.6.5/js/dataTables.buttons.min.js"
             integrity="sha512-C6bH79vwmIG/SVdXp2MT1SziCMrJ35rywNWqbYFLJXuiQsLlS5PH356A+FjsboOUaVjvtd+ELK3pb9hq0SXNrQ=="
             crossorigin="anonymous"></script>
