--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -21,10 +21,6 @@
 
             <!-- Links -->
             <ul class="nav navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/evidence/all">Evidence</a>
-                </li>
-
                 <li class="dropdown">
                     <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Class <span class="caret"></span></a>
@@ -40,10 +36,19 @@
                     </ul>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/evidence/all">Evidence</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/blastx">Blastx</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/statistics">Statistics</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/download">Download</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/help">Help</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
