--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
 
     <div class="row">
         <div class="page-header">
-            <h3>About us<small>Subtext for header</small></h3>
+            <h3>About us</h3>
 
         </div>
     </div>
