--- a/templates/network.html
+++ b/templates/network.html
@@ -8,7 +8,10 @@
   border: 2px solid #ddd;
   border-radius: 6px;
   padding: 5px;
-  width: 150px;
+  width: 60%;
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
 }
 </style>
     <div class="row">
@@ -42,11 +45,11 @@
 <div id="myTabContent" class="tab-content">
     <br>
         <div class="tab-pane fade in active" id="{{name}}">
-        <img class="myimg" src="../static/images/SSN_figures/{{name}}.jpg" data-large="../static/images/SSN_figures/{{name}}.jpg" alt="{{ name }}" style="width:100%">
+        <img class="myimg" src="../static/images/SSN_figures/{{ name }}.jpg" data-large="../static/images/SSN_figures/{{name}}.jpg" alt="{{ name }}">
         </div>
     {%for i in finalfile%}
     <div class="tab-pane fade" id="{{i}}">
-        <img class="myimg" src="../static/images/SSN_figures/{{i}}.jpg" alt="{{ i }}" style="width:100%">
+        <img class="myimg" src="../static/images/SSN_figures/{{i}}.jpg" alt="{{ i }}">
     </div>
     {%endfor%} 
     </div>
