Day by day requirement by Bo

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -3,7 +3,8 @@
 <div class="container-fluid  topper">
     <div class="row">
         <div class="col-md-12 image-header">
-            <p id="version">Version 1.3</p>
+            <!--<p id="version">Version 1.3</p>-->
+            <img src="../static/logo.png" alt="[L1]hesperidin" style="height:100px">
         </div>
     </div>
 
