--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -10,8 +10,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://www.unl.edu">
-                <img alt="Brand" src="https://ucomm.unl.edu/images/brand-book/Our-marks/R-UNL-Hex.svg"
+            <a href="www.unl.edu">
+                <img alt="Brand" src="{{ url_for('static', filename='images/unl.svg') }}"
                      class="navbar-brand"></a>
             <a class="navbar-brand" href="/">{{ config['title'] }}</a>
         </div>
