--- a/templates/family.html
+++ b/templates/family.html
@@ -25,7 +25,7 @@
         </div>
     {% endif %}
     <div class="familyResource">
-        <h2>Family Sequence</h2>
+        <h2>Family Sequences</h2>
         <ul class="breadcrumb" style="font-size: medium">
             <li>
                 <button><a href="{{ url_for('swissport', family_id = family_id) }}">Swissport</a></button>
