--- a/templates/subfamily.html
+++ b/templates/subfamily.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="familyResource">
-        <h1>Family Resource</h1>
+        <h1>Subfamily Sequences</h1>
         <ul class="breadcrumb" style="font-size: medium">
             <li>
                 <button><a href="{{ url_for('swissport', family_id = family_id) }}">Swissport</a></button>
