--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     {% if not subfamily %}
-        <a class="btn btn-primary btn-lg btn-block" href="/tree/{{ name }}">Open Tree for {{ name }}</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/tree/{{ name }}">View phylogenetic tree</a>
     {% endif %}
     <div class="abstractOfPage">
         <div class="informationOfGene">
@@ -34,7 +34,7 @@
                         fieldBoundary: '',
                         text: 'export',
                         exportOptions: {
-                            columns: [-2]
+                            columns: [0,1,2,3,4,5]
                         }
                     },
                     {
@@ -149,7 +149,7 @@
                         </td>
                     {% endif %}
                     <td>
-                        <a href={{ url_for('detail', unid = record.uniq_id) }}>view</a>
+                        <a href="{{ url_for('detail', unid = record.uniq_id) }}">view</a>
                     </td>
                     <td>
                         <p hidden>>{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}</p>
