--- a/templates/404.html
+++ b/templates/404.html
@@ -9,7 +9,7 @@
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:700,900" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="/static/styles/404.css"/>
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='styles/404.css') }}"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -29,7 +29,7 @@
         <p>Sorry but the page you are looking for does not exist, have been removed, name changed or is temporarily
             unavailable</p>
         <a href="#" onclick="history.back();">Go back</a>
-        <a href="/">Homepage</a>
+        <a href="{{ url_for('index') }}">Homepage</a>
         <a href="www.unl.edu">UNL</a>
     </div>
 </div>
