--- a/templates/_header.html
+++ b/templates/_header.html
@@ -4,7 +4,8 @@
     <div class="row">
         <div class="col-md-12 image-header">
             <!--<p id="version">Version 1.3</p>-->
-            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Database for Polyphenol Utilized Proteins from gut microbiota" style="height:100px">
+            <img src="{{ url_for('static', filename='images/logo.png') }}"
+                 alt="Database for Polyphenol Utilized Proteins from gut microbiota" style="height:100px">
         </div>
     </div>
 
