--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -36,7 +36,7 @@
                             fieldBoundary: '',
                             text: 'export',
                             exportOptions: {
-                                columns: [0,1,2,3,4,5]
+                                columns: [0, 1, 2, 3, 4, 5]
                             }
                         },
                         {
