--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="{{ url_for('evidence', family_id='all') }}">Evidence</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('blastx') }}">Blastx</a>
+                    <a class="nav-link" href="{{ url_for('blast') }}">Blast</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('statistics') }}">Statistics</a>
