--- a/templates/result_blastp.html
+++ b/templates/result_blastp.html
@@ -24,85 +24,13 @@
                 $('#data-table').DataTable({
                     lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
                     dom: 'Bfrtip',
-                    columnDefs: [{
-                        targets: [7, 8],
-                        searchable: true,
-                        visible: false
-                    }],
                     buttons: [
                         'pageLength',
                         {
                             extend: 'csvHtml5',
                             fieldBoundary: '',
-                            text: 'export',
-                            exportOptions: {
-                                columns: [-2]
-                            }
-                        },
-                        {
-                            extend: 'copy',
-                            fieldBoundary: '',
-                            text: 'copy',
-                            title: '',
-                            header: '',
-                            exportOptions: {
-                                columns: [-2]
-                            }
-                        },
-                        {
-                            text: 'All',
-                            action: function () {
-                                location.reload(true);
-                            }
-                        },
-                        {
-                            text: 'Bacteria',
-                            action: function () {
-                                var table = $('#data-table').DataTable();
-                                table.column(4).search('').draw();
-                                var table = $('#data-table').DataTable();
-                                table.column(-1).search('Bacteria').draw();
-                            }
-                        },
-                        {
-                            text: 'Archaea',
-                            action: function () {
-                                var table = $('#data-table').DataTable();
-                                table.column(4).search('').draw();
-                                var table = $('#data-table').DataTable();
-                                table.column(-1).search('Archaea').draw();
-                            }
-                        },
-                        {
-                            text: 'Eukaryota',
-                            action: function () {
-                                var table = $('#data-table').DataTable();
-                                table.column(4).search('').draw();
-                                var table = $('#data-table').DataTable();
-                                table.column(-1).search('Eukaryota').draw();
-                            }
-                        },
-                        {
-                            text: 'Viruses',
-                            action: function () {
-                                var table = $('#data-table').DataTable();
-                                table.column(4).search('').draw();
-                                var table = $('#data-table').DataTable();
-                                table.column(-1).search('Viruses').draw();
-                            }
-                        },
-                        {
-                            text: 'Unclassified',
-                            action: function () {
-                                var table = $('#data-table').DataTable();
-                                table.column(4).search('').draw();
-                                var table = $('#data-table').DataTable();
-                                table.column(-1).search('unclassified').draw();
-                            }
-
-                        }
-                    ],
-                    select: true
+                            text: 'export'
+                        }]
                 });
             });
         </script>
