--- a/templates/result_blastp.html
+++ b/templates/result_blastp.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="row">
         <div class="page-header">
-            <h3>This is Result of blastx page<small>Subtext for header</small></h3>
+            <h3>Blast Result</h3>
 
         </div>
     </div>
