--- a/templates/classes.html
+++ b/templates/classes.html
@@ -13,58 +13,13 @@
         <div class="Family">
         <h2>Family</h2>
         <ul class="breadcrumb" style="font-size: medium">
-        {% if class_id == 'SRs' %}
-        {% elif class_id == 'TRs' %}
-         {% else %}
-        {% if class_id == 'ORs' %}
-            {% for i in range(9) %}
-                {% set family_id = 'OR' + (i + 1)|string() %}
-                <li><a href="{{ url_for('family', family_id = family_id) }}">{{ family_id }}</a> <span
-                        class="divider"></span>
-                </li>
-            {% endfor %}
-        {% elif class_id == 'FRs' %}
-            {% for i in range(4) %}
-                {% set family_id = 'FR' + (i + 1)|string() %}
-                <li><a href="{{ url_for('family', family_id = family_id) }}">{{ family_id }}</a> <span
-                        class="divider"></span>
-                </li>
-            {% endfor %}
-        {% elif class_id == 'HRs' %}
-            {% for i in range(8) %}
-                {% set family_id = 'HR' + (i + 1)|string() %}
-                <li><a href="{{ url_for('family', family_id = family_id) }}">{{ family_id }}</a> <span
-                        class="divider"></span>
-                </li>
-            {% endfor %}
-        {% elif class_id == 'NCRs' %}
-            {% for i in range(1) %}
+        {% for i in range(amount) %}
+            {% set family_id = class_id[:-1] + (i + 1)|string() %}
+            <li><a href="{{ url_for('family', family_id = family_id) }}">{{ family_id }}</a> <span
+                    class="divider"></span>
+            </li>
+        {% endfor %}
 
-                {% set family_id = 'NCR'+ (i + 1)|string() %}
-
-                <li><a href="{{ url_for('family', family_id = family_id) }}">{{ family_id }}</a> <span
-                        class="divider"></span>
-                </li>
-            {% endfor %}
-        {% elif class_id == 'IRs' %}
-            {% for i in range(2) %}
-
-                {% set family_id = 'IR'+ (i + 1)|string() %}
-
-                <li><a href="{{ url_for('family', family_id = family_id) }}">{{ family_id }}</a> <span
-                        class="divider"></span>
-                </li>
-            {% endfor %}
-        {% elif class_id == 'UCs' %}
-            {% for i in range(2) %}
-                {% set family_id = 'UC'+ (i + 1)|string() %}
-
-                <li><a href="{{ url_for('family', family_id = family_id) }}">{{ family_id }}</a> <span
-                        class="divider"></span>
-                </li>
-            {% endfor %}
-        {% endif %}
-    {% endif %}
 </ul>
 </div>
     <br>
