new line on copy

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -36,7 +36,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('evidence', family_id='all') }}">Evidence</a>
+                    <a class="nav-link" href="{{ url_for('evidence') }}">Evidence</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('blast') }}">Blast</a>
