--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -41,8 +41,9 @@
                         fieldBoundary: '',
                         text: 'copy',
                         title: '',
-                        header: '',
+                        header: '\n',
                         exportOptions: {
+                            stripNewlines: false,
                             columns: [-2]
                         }
                     },
@@ -114,7 +115,7 @@
                 <th style="white-space: nowrap">Family</th>
                 <th style="white-space: nowrap">EC</th>
                 <th style="white-space: nowrap">Sequence</th>
-                <th style="white-space: nowrap">hide</th>
+                <th style="white-space: nowrap"><br></th>
                 <th style="white-space: nowrap">type</th>
             </tr>
             </thead>
