--- a/templates/network.html
+++ b/templates/network.html
@@ -23,16 +23,8 @@
     <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('trembl', family_id = name ) }}">Open TrEMBL for {{ name }}</a>
 
     <div id="introduction">
-        <p style="font-size: x-large">Tree diagrams originated in the medieval era to represent genealogical
-            relationships.
-
-            Phylogenetic tree diagrams in the evolutionary sense date back to at least the early 19th century.
-
-            The term phylogeny for the evolutionary relationships of species through time was coined by Ernst Haeckel,
-            who went further than Darwin in proposing phylogenic histories of life. In contemporary usage, tree of life
-            refers to the compilation of comprehensive phylogenetic databases rooted at the last universal common
-            ancestor of life on Earth. The Open Tree of Life, first published September 2015, is a project to compile
-            such a database for free publ{c access.</p></div>
+        {{ content|safe }}
+    </div>
 
     <ul id="myTab" class="nav nav-tabs">
         <li class="active">
