Implement full title for page tree, network, swissport, trembl

--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     {% if not subfamily %}
-        <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('tree', family_id=name) }}">View phylogenetic tree</a>
+        <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('tree', family_id=family_id) }}">View phylogenetic tree</a>
     {% endif %}
     <div class="abstractOfPage">
         <div class="informationOfGene">
