--- a/templates/tree.html
+++ b/templates/tree.html
@@ -26,7 +26,7 @@
 
         </div>
     </div>
-    <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('swissport', family_id = name) }}">Open Swiss-Prot for {{ name }}</a>
+    <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('swissport', family_id = family_id) }}">Open Swiss-Prot for {{ name }}</a>
     <div id="introduction">
         <p style="font-size: x-large"></p>
     </div>
