--- a/templates/network.html
+++ b/templates/network.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('trembl', family_id = name ) }}">Open TrEMBL for {{ name }}</a>
+    <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('trembl', family_id = family_id ) }}">Open TrEMBL for {{ name }}</a>
 
     <div id="introduction">
         {{ content|safe }}
@@ -28,7 +28,7 @@
 
     <ul id="myTab" class="nav nav-tabs">
         <li class="active">
-            <a href="#{{ name }}" data-toggle="tab">{{ name }}</a>
+            <a href="#{{ family_id }}" data-toggle="tab">{{ family_id }}</a>
         </li>
         {% for i in finalfile %}
             <li><a href="#{{ i }}" data-toggle="tab">{{ i }}</a></li>
@@ -36,8 +36,8 @@
     </ul>
     <div id="myTabContent" class="tab-content">
         <br>
-        <div class="tab-pane fade in active" id="{{ name }}">
-            <img class="myimg" src="{{ url_for('static', filename='images/SSN_figures/') }}{{ name }}.jpg">
+        <div class="tab-pane fade in active" id="{{ family_id }}">
+            <img class="myimg" src="{{ url_for('static', filename='images/SSN_figures/') }}{{ family_id }}.jpg">
         </div>
         {% for i in finalfile %}
             <div class="tab-pane fade" id="{{ i }}">
