--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -23,8 +23,9 @@
                 $('#data-table').DataTable({
                     lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
                     dom: 'Bfrtip',
+                    "scrollX": true
                     columnDefs: [{
-                        targets: [7, 8],
+                        targets: [6],
                         searchable: true,
                         visible: false
                     }],
