--- a/templates/network.html
+++ b/templates/network.html
@@ -20,7 +20,8 @@
         </div>
     </div>
 
-    <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('trembl', family_id = family_id ) }}">Open TrEMBL for {{ name }}</a>
+    <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('trembl', family_id = family_id ) }}">Open TrEMBL
+        for {{ name }}</a>
 
     <div id="introduction">
         {{ content|safe }}
@@ -41,7 +42,8 @@
         </div>
         {% for i in finalfile %}
             <div class="tab-pane fade" id="{{ i }}">
-                <img class="myimg" src="{{ url_for('static', filename='images/SSN_figures/') }}{{ i }}.jpg" alt="{{ i }}">
+                <img class="myimg" src="{{ url_for('static', filename='images/SSN_figures/') }}{{ i }}.jpg"
+                     alt="{{ i }}">
             </div>
         {% endfor %}
     </div>
