--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -9,7 +9,8 @@
         </div>
     </div>
     {% if not subfamily %}
-        <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('network', family_id = family_id) }}">View sequence similarity network</a>
+        <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('network', family_id = family_id) }}">View sequence
+            similarity network</a>
     {% endif %}
     <div class="abstractOfPage">
         <div class="informationOfGene">
@@ -40,14 +41,14 @@
                             }
                         },
                         {
-                        extend: 'copy',
-                        fieldBoundary: '',
-                        text: 'copy',
-                        title: '',
-                        header: '\n',
-                        exportOptions: {
-                            stripNewlines: false,
-                            columns: [-2]
+                            extend: 'copy',
+                            fieldBoundary: '',
+                            text: 'copy',
+                            title: '',
+                            header: '\n',
+                            exportOptions: {
+                                stripNewlines: false,
+                                columns: [-2]
                             }
                         },
                         {
