Add Google Analytics

--- a/templates/_head.html
+++ b/templates/_head.html
@@ -53,4 +53,17 @@
 
     <link href="{{ url_for('static', filename='styles/custom.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCEW4B3ZKM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-HCEW4B3ZKM');
+    </script>
 </head>
