add support to blastp and blastx

--- a/templates/result_blastp.html
+++ b/templates/result_blastp.html
@@ -4,14 +4,14 @@
 {% block content %}
     <div class="row">
         <div class="page-header">
-            <h3>Blast Result</h3>
+            <h3>{{head}}</h3>
 
         </div>
     </div>
     <div class="abstractOfPage">
         <div class="informationOfGene">
             <h1>
-                Result of blastp
+                {{head}}
             </h1>
             <p></p>
         </div>
