--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -20,6 +20,7 @@
     <script defer type="text/javascript">
         $(document).ready(function () {
             $('#data-table').DataTable({
+                "scrollX": true,
                 lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
                 dom: 'Bfrtip',
                 columnDefs: [{
@@ -105,8 +106,8 @@
             });
         });
     </script>
-    <div class="container-wrap">
-        <table class="table" id="data-table">
+    <div>
+        <table class="table display" id="data-table">
             <thead>
             <tr>
                 <th style="white-space: nowrap">Protein Name</th>
