add prefix dbpup

--- a/templates/tree.html
+++ b/templates/tree.html
@@ -277,7 +277,7 @@
                     .attr('xlink:href', function (d) {
                         if (children[i].name.search('|') != -1) {
                             var uniq_id = children[i].name.split('|')[1];
-                            return '/detail/' + uniq_id
+                            return '/dbpup/detail/' + uniq_id
                         }
 
                     })
