--- a/templates/410.html
+++ b/templates/410.html
@@ -1,1 +1,36 @@
-410
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Data not found | 410</title>
+    <!-- Google font -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:700,900" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='styles/404.css') }}"/>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+<body>
+<div id="notfound">
+    <div class="notfound">
+        <div class="notfound-404">
+            <h1>500</h1>
+        </div>
+        <h2>Oops! Data not Found!</h2>
+        <p>Your input does not match any record in our database. Please check your input exist and make sure you are using the correct format. You can contact us if the problem persists.</p>
+        <a href="#" onclick="history.back();">Go back</a>
+        <a href="{{ url_for('index') }}">Homepage</a>
+        <a href="https://www.unl.edu">UNL</a>
+    </div>
+</div>
+</body>
+</html>
